--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
 # Declare files that will always have LF line endings on checkout.
-META-INF/** text eol=lf
-*.prop text eol=lf
 *.sh text eol=lf
+*.prop text eol=lf
 *.md text eol=lf
+*.xml text eol=lf
+META-INF/** text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
-system/** binary
+common/unityfiles/tools/** binary
+addon/** binary
